# thermo_scope

./: .gitignore  .gitmodules
electrical/thermo_scope/: thermo_scope.kicad_prl  thermo_scope.kicad_pro  thermo_scope.kicad_sch  thermo_scope.kicad_sch-bak  ~thermo_scope.kicad_sch.lck
firmware/: CMakeLists.txt  picow.cfg
firmware/src/: bme280.cpp  bme280.hpp  bmp581.cpp  bmp581.hpp  bs_280.cpp  bs_280.hpp  cyw43_shim.c  cyw43_shim.h  data_collection.cpp  data_collection.h  data_collection.hpp  display.cpp  display.hpp  i2c_bus_manager.cpp  i2c_bus_manager.hpp  ili9341.c  ili9341.cpp  ili9341.h  ili9341.hpp  influxdb_export.cpp  influxdb_export.h  influxdb_export.hpp  lcdTest.c  lv_conf.h  lwipopts.h  main.c  main.cpp  main.hpp  max11254.cpp  max11254.hpp  pio_spi.c  pio_spi.h  power.cpp  power.h  power_status.c  power_status.h  rate_meter.hpp  ring_buffer.hpp  simple_sensor_main.cpp  system_data_sources.cpp  (+12 more)
hardware/: housing.FCStd  housing.FCStd1
